Alterada implementacao das arestas. Agora usando um map. Map implementado tambem para pesos e distancia dos vertices para a raiz para quando dijkstra for usado

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -3,6 +3,9 @@
         "stdexcept": "cpp",
         "ostream": "cpp",
         "iostream": "cpp",
-        "list": "cpp"
+        "list": "cpp",
+        "deque": "cpp",
+        "string": "cpp",
+        "vector": "cpp"
     }
 }
